--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "code-solutions",
+  "name": "c0225-code-solutions",
   "version": "1.0.0",
   "private": true,
   "description": "Code exercise solutions.",
@@ -27,5 +27,10 @@
     "stylelint-config-recommended": "^11.0.0",
     "stylelint-config-standard": "^32.0.0",
     "typescript": "^5.2.2"
-  }
+  },
+  "type": "module",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
